<resources>
    <string name="app_name">sdy51ergasi3</string>
    <string name="status">Status</string>
    <string name="user_id">User ID</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="title_activity_send_data">SendData</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="sign_out">Sign Out</string>
    <string name="next">Next</string>
    <string name="get_location">Get Location</string>
    <string name="lon">Longitude</string>
    <string name="lat">Latitude</string>
    <string name="send">Send</string>
    <string name="title_activity_maps">Map</string>
    <string name="create_report">Create Report</string>
</resources>
